# TheGame

./: .gitignore  CMakeLists.txt
shaders/: frag.glsl  vert.glsl
src/: camera.cpp  camera.hpp  main.cpp  program.cpp  program.hpp  shader.cpp  shader.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp
